# pythonnetworking

./: cli.py  commands.py  main.py  some-text.txt
http-requests/: main.py  pyproject.toml
prompting-cli/: cli.py  errors.py  pyproject.toml
ssh-interactions/: main.py  pyproject.toml
