[tool.poetry]
name = "ssh-interactions"
version = "0.1.0"
description = ""
authors = ["david <tonage72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
